--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.6.11",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "amqplib": "^0.5.5",
+    "js-beautify": "^1.10.2"
   }
 }
